--- a/src/view/admon.html
+++ b/src/view/admon.html
@@ -16,7 +16,7 @@
     <section>
         <nav class="fill">
             <ul class="horizontal">
-                <li><img class="logo" src="src/img/logo.png" alt=""></li>
+                <li><img class="logo" src="../img/logo.png" alt=""></li>
                 <li><a href="./admon.html">Administración</a></li>
                 <li><a href="./pedido.html">Pedido</a></li>
                 <li><a href="../../">Menú</a></li>
