--- a/src/view/pedido.html
+++ b/src/view/pedido.html
@@ -15,7 +15,7 @@
 <body>
     <section >
             <ul class="horizontal">
-                <li><img class="logo" src="src/img/logo.png" alt=""></li>
+                <li><img class="logo" src="../img/logo.png" alt=""></li>
                 <li><a href="./admon.html">Administración</a></li>
                 <li><a href="./pedido.html">Pedido</a></li>
                 <li><a href="../../">Menú</a></li>
